# lesson

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: lesson-compress.md
commands/: lesson-done.md  lesson-index.md  lesson-map.md  lesson-profile.md  lesson-resume.md  lesson.md  regenerate.md
docs/: architecture.md  blog-article.md  hooks.md  how-it-works.md
eval/: benchmark.py  metrics.py
hooks/: hooks.json  post_tool_use.py  stop.py
hooks/antigravity/rules/: lesson.md
hooks/antigravity/workflows/: lesson.md
hooks/codex/: hooks.json  post_tool_use_codex.py  session_start_codex.py  stop_codex.py
hooks/copilot/: lesson.json  post_tool_use_copilot.py  post_tool_use_copilot.sh  session_end_copilot.py  session_end_copilot.sh  session_start_copilot.py  session_start_copilot.sh  user_prompt_copilot.py  user_prompt_copilot.sh
hooks/cursor/: after_file_edit_cursor.py  hooks.json  post_tool_use_cursor.py  stop_cursor.py
hooks/opencode/: index.mjs  opencode_bridge.py
lesson/: __init__.py  cli.py  session.py
lesson.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lesson/graph/: __init__.py  algorithms.py  builder.py  schema.py  visualize.py
lesson/hooks/: __init__.py  adapter.py  antigravity.py  antigravity_mcp.py  claude_code.py  codex.py  copilot.py  cursor.py  opencode.py  prompt_capture.py  session_start.py  stop.py
lesson/nlp/: __init__.py  embedder.py  extractor.py  scorer.py
lesson/render/: __init__.py  markdown.py  pdf.py
scripts/: install.py  render_pdf.py
skills/: _shared.md  skill-antigravity.md  skill-claude-code.md  skill-codex.md  skill-copilot.md  skill-cursor.md  skill-droid.md  skill-gemini.md  skill-openclaw.md  skill-opencode.md  skill-trae.md
templates/: lesson.html.tmpl  lesson.md.tmpl
tests/fixtures/: python_import_arc.jsonl  react_useeffect_arc.jsonl
tests/fixtures/hooks/antigravity/: record_event.shape.json
tests/fixtures/hooks/codex/: post_tool_use.shape.json
tests/fixtures/hooks/copilot/: post_tool_use.shape.json  user_prompt_submitted.shape.json
tests/fixtures/hooks/cursor/: post_tool_use.shape.json
tests/fixtures/hooks/opencode/: post_tool_use.shape.json
tests/integration/: test_antigravity_mcp.py  test_codex_hooks.py  test_compression_trigger.py  test_copilot_hooks.py  test_opencode_plugin.py  test_pipeline.py  test_properties.py
tests/unit/: test_algorithms.py  test_antigravity_mcp.py  test_builder.py  test_cli.py  test_copilot_hook.py  test_copilot_prompt_hook.py  test_cursor_hook.py  test_embedder.py  test_extractor.py  test_hook_adapter.py  test_install_merge.py  test_opencode_bridge.py  test_post_tool_use_hook.py  test_prompt_capture.py  test_render.py  test_schema.py  test_scorer.py  test_session.py  test_session_start_hooks.py  test_stop_hook.py  test_visualize.py
