[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesson"
version = "0.1.0"
description = "Turns AI debugging sessions into textbook-quality lessons via algorithmic knowledge graph extraction"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
nlp = [
    # Heavy optional deps: install when you want semantic deduplication
    "spacy>=3.7",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
all = [
    "lesson[nlp,dev]",
]

[project.scripts]
lesson = "lesson.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lesson*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["lesson"]
omit = ["tests/*", "eval/*"]
