[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesson"
version = "0.3.0"
description = "Turn AI coding sessions into grounded, textbook-quality lessons via algorithmic knowledge-graph extraction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oussema Ben Ameur", email = "oussemabenameur9@gmail.com"},
]
keywords = [
    "learning",
    "education",
    "lesson",
    "debugging",
    "knowledge-graph",
    "claude-code",
    "multi-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
nlp = [
    # Heavy optional deps: install when you want semantic deduplication
    "spacy>=3.7",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
all = [
    "lesson[nlp,dev]",
]

[project.urls]
Homepage = "https://github.com/OussemaBenAmeur/lesson"
Repository = "https://github.com/OussemaBenAmeur/lesson"
Issues = "https://github.com/OussemaBenAmeur/lesson/issues"
Changelog = "https://github.com/OussemaBenAmeur/lesson/blob/main/CHANGELOG.md"

[project.scripts]
lesson = "lesson.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lesson*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["lesson"]
omit = ["tests/*", "eval/*"]
